[tool.poetry]
name = "polyclover"
version = "0.1.0"
description = "collaborative 4-leaf-clover hunting app"
authors = ["David Samson <david.andrew.engineer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kivy = "^2.3.1"
fastapi = "^0.115.6"
plyer = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
